--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	<!--             -->
 	<!--             -->
 	
-	<header>
-	
+	<header class="breakpoint">
+		
 		<div class="header__contacts">
 			<a href="tel:+79106672903">
 				<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -55,7 +55,7 @@
 				info@modellini.ru
 			</a>
 		</div>
-	
+		
 		<div class="header__nav_box">
 			<div class="header__mobile_icon">
 				<div></div>
@@ -79,14 +79,16 @@
 			<a href="https://t.me/" id="tg" target="_blank"><img src="src/tg.svg" alt="telegram icon"></a>
 			<a href="https://www.whatsapp.com/" id="wa" target="_blank"><img src="src/wa.svg" alt="whatsapp icon"></a>
 		</div>
+
 	
 	</header>
+
 	
 	<main>
 	
 		<div class="main_box">
 		
-			<div class="main_box__bottom">
+			<div class="main_box__bottom breakpoint">
 				
 				<div class="main_box__left">
 					<h1 class="main_box__top">ПРОИЗВОДСТВО ТРИКОТАЖНЫХ ИЗДЕЛИЙ</h1>
@@ -117,7 +119,7 @@
 		
 		</div>
 		
-		<section class="services fix_box" id="services">
+		<section class="services fix_box breakpoint" id="services">
 		
 			<div class="services__about_us scroll-item">
 				<div class="logo scroll-item"><div></div><div></div></div>
@@ -152,7 +154,7 @@
 		
 		<section class="cans full_box right_image_box" id="cans">
 		
-			<div class="fix_box ui_element">
+			<div class="fix_box ui_element breakpoint">
 			
 				<div class="desc_box div_devide flex-direction_column full-width">
 					<div class="left scroll-item font-size_10vw">НАШИ ВОЗМОЖНОСТИ</div>
@@ -187,7 +189,7 @@
 		
 		</section>
 		
-		<section class="video_preview fix_box right_image_box" id="video_preview">
+		<section class="video_preview fix_box right_image_box breakpoint" id="video_preview">
 			
 			<div class="desc_box div_devide flex-direction_column full-width">
 				<div class="left scroll-item font-size_10vw">Швейная фабрика MODELLINI</div>
@@ -221,7 +223,7 @@
 		
 		<section class="top full_box" id="top">
 		
-			<div class="fix_box ui_element">
+			<div class="fix_box ui_element breakpoint">
 			
 				<div class="desc_box">
 					<div class="left font-size_10vw">ТОП - 5 ПРИЧИН СОТРУДНИЧАТЬ С НАМИ</div>
@@ -291,7 +293,7 @@
 		
 		</section>
 		
-		<section class="form fix_box right_image_box" id="form">
+		<section class="form fix_box right_image_box breakpoint" id="form">
 			
 			<div class="desc_box flex-direction_column full-width">
 				<div class="left font-size_10vw">ЗАПОЛНИТЕ ФОРМУ ДЛЯ РАСЧЕТА СРОКОВ И СТОИМОСТИ ПОШИВА</div>
@@ -336,7 +338,7 @@
 		
 		<section class="reviews full_box" id="reviews">
 		
-			<div class="fix_box ui_element">
+			<div class="fix_box ui_element breakpoint">
 			
 				<div class="desc_box flex-direction_column full-width">
 					<div class="left scroll-item">
@@ -449,7 +451,7 @@
 	
 	<footer id="contacts">
 	
-		<div class="ui_box flex-direction_column full-width">
+		<div class="ui_box flex-direction_column full-width breakpoint">
 	
 			<div class="contacts__left">
 				<h2 class="font-size_10vw">MODELLINI</h2>
@@ -500,7 +502,7 @@
 		
 		</div>
 		
-		<div class="contacts__links">
+		<div class="contacts__links breakpoint">
 			<a href="">Все права защищены</a>
 			<a href="">Политика конфиденциальности</a>
 			<a href="">Создание сайта - Иллюминатор</a>
