--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			
 			<div class="video_preview__comment">
 			
-				<div class="ui_box">
+				<div class="ui_box flex-direction_column">
 					<div class="video_preview__text scroll-item">
 						<div class="video_preview__icon_quat_top"><img src="src/quotation_marks.svg" id="ux_element" alt="design element quotationmarks"></div>
 						<p>Более 10 лет шьем качественную трикотажную одежду для себя и других компаний. Производим костюмы, пижамы, сорочки, халаты, футболки, брюки, шорты, туники, сарафаны и другие изделия. Используем трикотажные полотна надежных поставщиков. Предлагаем большой каталог готовых лекал, а также создание изделий с нуля!</p>
@@ -229,7 +229,7 @@
 					<div class="left font-size_10vw">ТОП - 5 ПРИЧИН СОТРУДНИЧАТЬ С НАМИ</div>
 				</div>
 				
-				<div class="top__list">
+				<div class="top__list flex-direction_column">
 					
 					<div class="top_one scroll-item">
 						<div class="logo"><div></div><div></div></div>
@@ -502,7 +502,7 @@
 		
 		</div>
 		
-		<div class="contacts__links breakpoint">
+		<div class="contacts__links breakpoint flex-direction_column">
 			<a href="">Все права защищены</a>
 			<a href="">Политика конфиденциальности</a>
 			<a href="">Создание сайта - Иллюминатор</a>
