--- a/index.html
+++ b/index.html
@@ -232,17 +232,20 @@
 				<div class="top__list flex-direction_column">
 					
 					<div class="top_one scroll-item">
-						<div class="logo"><div></div><div></div></div>
-						<div class="top__desc">
+						<div class="logo ldh_white"><div></div><div></div></div>
+						<div class="top__desc w">
 							<h3>Мы рядом!</h3>
 							<p>Наши скорость и качество гораздо лучше фабрик ближнего и дальнего зарубежья, мы общаемся на одном языке и логистика от нас быстрее и дешевле.</p>
 						</div>
+						<div class="top__box_black"></div>
+						<img src="src/image/top1.png" id="back" loading="lazy" alt="top one image">
 					</div>
 					
 					<div class="top_two scroll-item">
 						<div class="logo ldh_white"><div></div><div></div></div>
 						<div class="top__desc w">
 							<h3>Гарантия качества</h3>
+							<p>Изготавливаем продукцию только из качественной ткани. Наши поставщики являются мировыми лидерами.</p>
 						</div>
 						<div class="top__box_black"></div>
 						<img src="src/image/top1.png" id="back" loading="lazy" alt="top one image">
@@ -252,6 +255,7 @@
 						<div class="logo ldh_white"><div></div><div></div></div>
 						<div class="top__desc w">
 							<h3>Планируем наперед</h3>
+							<p>Наши планы грандиозные, поэтому мы нацелены работать очень долго</p>
 						</div>
 						<div class="top__box_black"></div>
 						<img src="src/image/top2.png" id="back" loading="lazy" alt="top two image">
@@ -261,6 +265,7 @@
 						<div class="logo ldh_white"><div></div><div></div></div>
 						<div class="top__desc w">
 							<h3>Выгодные цены</h3>
+							<p>Имеем самые лучшие предложение по цене/качество на рынке текстиля</p>
 						</div>
 						<div class="top__box_black"></div>
 						<img src="src/image/top3.png" id="back" loading="lazy" alt="top three image">
@@ -270,6 +275,7 @@
 						<div class="logo ldh_white"><div></div><div></div></div>
 						<div class="top__desc w">
 							<h3>Команда специалистов</h3>
+							<p>Наша команда состоит из высококлассных специалистов, которые имеют огромный опыт</p>
 						</div>
 						<div class="top__box_black"></div>
 						<img src="src/image/top4.png" id="back" loading="lazy" alt="top four image">
