--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 							<h2>Трикотажная фабрика</h2>
 							<h2 class="main_box__name_company">MODELLINI</h2>
 						</div>
-						<div class="main_box__logo logo"><div></div><div></div></div>
+						<div class="main_box__logo logo">
+							<svg width="75" height="124" viewBox="0 0 75 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M0 0H13C47.2417 0 75 27.7583 75 62C75 96.2417 47.2417 124 13 124H0V0Z" fill="#C12754"/>
+							</svg>
+						</div>
 					</div>
 				</div>
 				<div class="main_box__right">
@@ -226,7 +230,7 @@
 			<div class="fix_box ui_element breakpoint">
 			
 				<div class="desc_box">
-					<div class="left font-size_10vw">ТОП - 5 ПРИЧИН СОТРУДНИЧАТЬ С НАМИ</div>
+					<div class="left font-size_10vw">ТОП - 5 ПРИЧИН <br>СОТРУДНИЧАТЬ С НАМИ</div>
 				</div>
 				
 				<div class="top__list flex-direction_column">
@@ -302,7 +306,7 @@
 		<section class="form fix_box right_image_box breakpoint" id="form">
 			
 			<div class="desc_box flex-direction_column full-width">
-				<div class="left font-size_10vw">ЗАПОЛНИТЕ ФОРМУ<br> ДЛЯ РАСЧЕТА СРОКОВ И СТОИМОСТИ ПОШИВА</div>
+				<div class="left font-size_10vw">ЗАПОЛНИТЕ ФОРМУ<br> ДЛЯ РАСЧЕТА СРОКОВ И&nbsp;СТОИМОСТИ ПОШИВА</div>
 				<div class="right">Ответьте на вопросы и мы рассчитаем стоимость и сроки пошива вашего заказа.</div>
 			</div>
 			
