--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 						<div class="contacts__phone_image"><img src="src/big_phone.svg" alt="icon phone"></div>
 						<div class="contacts__phone_info">
 							<h4>Номер телефона:</h4>
-							<a href="tel:84932929440">8 (4932) 929-440, 8 (905) 107-98-88</a>
+							<a href="tel:84932929440">8 (4932) 929-440, 8&nbsp;(905)&nbsp;107&#8209;98&#8209;88</a>
 						</div>
 					</div>
 					
@@ -549,7 +549,7 @@
 			
 			<div class="pop_up__box_success">
 				<label>
-					<input type="checkbox" id="success" name="success" />
+					<input type="checkbox" id="success" name="success" checked/>
 					<span>Я согласен с Политикой конфиденциальности</span>
 				</label>
 			</div>
