--- a/index.html
+++ b/index.html
@@ -98,9 +98,12 @@
 							<h2 class="main_box__name_company">MODELLINI</h2>
 						</div>
 						<div class="main_box__logo logo">
-							<svg width="75" height="124" viewBox="0 0 75 124" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M0 0H13C47.2417 0 75 27.7583 75 62C75 96.2417 47.2417 124 13 124H0V0Z" fill="#C12754"/>
+							<svg width="138" height="124" viewBox="0 0 138 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M0 0H76C110.242 0 138 27.7583 138 62C138 96.2417 110.242 124 76 124H0V0Z" fill="#C12754"/>
 							</svg>
+							<!--<svg width="75" height="124" viewBox="0 0 75 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M0 0H13C47.2417 0 75 27.7583 75 62C75 96.2417 47.2417 124 13 124H0V0Z" fill="#C12754"/>
+							</svg>-->
 						</div>
 					</div>
 				</div>
